--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "esnext",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
