--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-5i4anz",
+  "name": "rxjs-vanilla-pipe-decorator",
   "version": "0.0.0",
   "private": true,
   "scripts": {
